--- a/test.html
+++ b/test.html
@@ -66,7 +66,7 @@ ul.task-list li input[type="checkbox"] {
 <h1>here is a header</h1>
 <p>I am testing my stuff</p>
 <p>Does this work?</p>
-<p><img src="hoarsepng.png" class="img-fluid"></p>
+<p><img src="jokebear.jpeg" class="img-fluid"></p>
 </section>
 
 </main>
